# cteenergymodel

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  TODO
bemodel/: Cargo.toml
bemodel/benches/: benchmark_bemodel.rs
bemodel/src/: bvh.rs  bvhidea.py  checks.rs  climatedata.rs  common.rs  from_ctehexml.rs  geometry.rs  lib.rs  model.rs  model_check.rs  model_impl.rs  model_n50.rs  model_qsoljul.rs  model_transmittance.rs  purge.rs  ray.rs  report.rs  reporting.rs  utils.rs
bemodel/src/climatedata/: climatezone.rs  hourlyraddata.rs  mod.rs  monthlyraddata.rs  zonesmeta.rs
bemodel/src/convert/: from_ctehexml.rs  mod.rs
bemodel/src/energy/: aabb.rs  bvh.rs  geometry.rs  indicators.rs  mod.rs  n50.rs  occluder.rs  props.rs  radiation.rs  transmittance.rs  utils.rs
bemodel/src/energy/indicators/: k.rs  mod.rs  n50.rs  qsoljul.rs  types.rs
bemodel/src/energy/raytracing/: aabb.rs  bvh.rs  mod.rs  occluder.rs  ray.rs
bemodel/src/model/: common.rs  constructions.rs  meta.rs  mod.rs  opaques.rs  space.rs  thermalbridge.rs  window.rs
bemodel/src/types/: common.rs  constructions.rs  geometry.rs  library.rs  materials.rs  meta.rs  mod.rs  model.rs  opaques.rs  overrides.rs  reporting.rs  schedules.rs  space.rs  space_conditions.rs  space_loads.rs  space_sys_conditions.rs  thermalbridge.rs  thermostat.rs  window.rs
bemodel/src/types/systems/: carrier.rs  mod.rs  system.rs  zone.rs  zonesystem.rs
bemodel/tests/: test.rs
bemodel/tests/data/: cajazapatos_bombacaloracs.json  caso_a.json  cubo.json  cubo_gt_caldera_radiadores.json  e4h_medianeras.json  ejemplo_gt_aerotermia.json  ejemploviv_unif.json
benches/: benchmark_types.rs
climate/: Cargo.toml
climate/src/: lib.rs  met.rs  metutils.rs  solar.rs
convertdb/: Cargo.toml  Makefile
convertdb/src/: lib.rs
hulc/: Cargo.toml
hulc/src/: ctehexml.rs  fileutils.rs  kyg.rs  lib.rs  tbl.rs  utils.rs
hulc/src/bdl/: blocks.rs  common.rs  mod.rs
hulc/src/bdl/db/: construction.rs  frame.rs  glass.rs  material.rs  mod.rs  wallcons.rs  windowcons.rs
hulc/src/bdl/envelope/: floor.rs  geom.rs  mod.rs  shadings.rs  space.rs  thermalbridge.rs  walls.rs  window.rs
hulc/src/bdl/systems/: mod.rs  schedules.rs
hulc/src/ctehexml/: datosgenerales.rs  mod.rs  systems.rs  systems_gt.rs  xmlhelpers.rs
hulc/src/ctehexml/systems/: gt_sys.rs  gt_types.rs  gt_types_impl.rs  mod.rs  types.rs  vyp_sys.rs  vyp_types.rs
hulc/src/utils/: file.rs  mod.rs  xml.rs
hulc/tests/: test.rs
hulc2model/: Cargo.toml  Makefile
hulc2model/src/: lib.rs  utils.rs
hulc_tests/: Cargo.toml
hulc_tests/benches/: benchmark_types.rs
hulc_tests/tests/: test.rs
hulc_tests/tests/00_plurif_s3_v0_d3/: 00_plurif_s3_v0_d3.ctehexml  KyGananciasSolares.txt  NewBDL_O.tbl
hulc_tests/tests/cajazapatos_bombacaloracs/: cajazapatos_bombacaloracs.ctehexml
hulc_tests/tests/cajazapatos_bombacaloracs/CALENER-GT/: cajazapatos_bombacaloracs.INP  cajazapatos_bombacaloracs.PD2
hulc_tests/tests/casoA/: DATOS_CTEEPBD.TXT  KyGananciasSolares.txt  NewBDL_O.tbl  casoa.ctehexml
hulc_tests/tests/casoC/: KyGananciasSolares.txt  casoc.ctehexml
hulc_tests/tests/cubo/: DATOS_CTEEPBD.TXT  KyGananciasSolares.txt  NewBDL_O.tbl  cubo.ctehexml
hulc_tests/tests/cubo_gt_caldera_radiadores/: cubo_gt_caldera_radiadores.ctehexml
hulc_tests/tests/cubo_gt_caldera_radiadores/CALENER-GT/: cubo_gt_caldera_radiadores.INP  cubo_gt_caldera_radiadores.PD2
hulc_tests/tests/cubo_gt_electrica/: cubo_gt_electrica.ctehexml
hulc_tests/tests/cubo_gt_electrica/CALENER-GT/: cubo_gt_electrica.bdl  cubo_gt_electrica.pd2
hulc_tests/tests/cubo_gt_furnace/: cubo_gt_furnace.ctehexml
hulc_tests/tests/cubo_gt_furnace/CALENER-GT/: cubo_gt_furnace.INP  cubo_gt_furnace.PD2
hulc_tests/tests/data/: KyGananciasSolares.txt  e4h_medianeras.ctehexml
hulc_tests/tests/e4h_medianeras/: e4h_medianeras.ctehexml
hulc_tests/tests/ejemplo_gt_aerotermia/: ejemplo_gt_aerotermia.ctehexml
hulc_tests/tests/ejemplopmt_HuecosOK/: NewBDL_O.tbl  ejemplopmt_huecosok.ctehexml
hulc_tests/tests/ejemplopmt_huecosok/: KyGananciasSolares.txt  NewBDL_O.res  NewBDL_O.tbl  ejemplopmt_huecosok.ctehexml
hulc_tests/tests/ejemploviv_unif/: GananciasSolares.txt  KyGananciasSolares.txt  NewBDL_O.tbl  ejemploviv_unif.ctehexml
hulc_tests/tests/liderdata/: 00_terciario_cs_2018.cte  01-02-18-avila.cte  01_adosado_1.CTE  01_adosado_2_palencia.cte  01_adosado_TC.cte  01_adosado_sin_sistema.cte  02_bloque.cte  03_adosado.cte  04_terciario_super.cte  05_adosado_entrem.cte  06_adosado.cte  07_puertoreal.cte  14_BloqueH5P.CTE  15_b6p2.cte  18_fsk.CTE  22_ejemplo5.CTE  25_2_minimos_CTE.cte  Negredo.CTE  alex.CTE  amayuelas_adobe_malaga.cte  amayuelas_tapial_badajoz.CTE  bke01.CTE  bloque_aislada_sur.CTE  bloque_curso.cte  bloque_medianeras_este_girado.cte  bloque_medianeras_sur.cte  calleter.cte  ceip_valencia.cte  colegio_exupery.cte  d3-madrid_f1_c1_s1.cte  ejemplo1.CTE  ejemplo2.CTE  ejemplo3.CTE  ejemplo4.CTE  ejemplo5.CTE  ejemplo6.CTE  negredo_adobe_madrid.cte  negredo_tapial_madrid.cte  puertoreal.cte  q1.cte  (+15 more)
hulc_tests/tests/paracuellos_gim_05/: paracuellos_gim_05.ctehexml
hulc_tests/tests/paracuellos_gim_05/CALENER-GT/: paracuellos_gim_05.INP  paracuellos_gim_05.PD2
src/: TODO  bdl.rs  cte.rs  ctehexml.rs  envolventetypes.rs  kyg.rs  lib.rs  main.rs  tbl.rs  types.rs  utils.rs  wingui.rs
src/bdl/: blocks.rs  common.rs  cons.rs  construction.rs  constypes.rs  env.rs  envtypes.rs  floor.rs  frame.rs  gap.rs  geom.rs  geomtypes.rs  glass.rs  layers.rs  material.rs  mod.rs  shadings.rs  space.rs  thermalbridge.rs  types.rs  walls.rs  window.rs
src/cte/: climatedata.rs  common.rs  elements.rs  from_bdl.rs  from_ctehexml.rs  impl_u_for_wall.rs  mod.rs  model.rs  model_impl.rs  params_compute.rs  simplemodel.rs
src/parsers/: BDCatalogo.bdc.utf8  BDCatalogo.rs  ctehexml.rs  kyg.rs  mod.rs  tbl.rs
tests/: test.rs
tests/00_plurif_s3_v0_d3/: 00_plurif_s3_v0_d3.ctehexml
tests/casoA/: KyGananciasSolares.txt  NewBDL_O.tbl  casoa.ctehexml
tests/casoC/: KyGananciasSolares.txt  NewBDL_O.tbl  casoc.ctehexml
(+40 files in other folders)
