[package]
name = "hulc2envolventecte"
version = "1.5.0"
authors = ["Rafael Villar Burke <pachi@ietcc.csic.es>"]
edition = "2018"
description = "Export data from a HULC project to the EnvolventeCTE JSON format"
repository = "https://github.com/pachi/hulc2envolventecte"
readme = "README.md"
keywords = ["buildings", "energy", "ISO EN 52000", "CTE", "EnvolventeCTE"]
categories = ["command-line-utilities", "science"]
license = "MIT"

[dependencies]
encoding = "0.2"
env_logger = "0.7"
anyhow = "1.0"
glob = "0.3"
log = "0.4"
roxmltree = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
winapi = { version = "0.3", features = ["wingdi", "winuser", "libloaderapi", "combaseapi", "objbase", "shobjidl", "shlobj", "winerror"] }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark_types"
harness = false

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
incremental = false
opt-level = "z"
