[workspace]

members = [
    "bemodel", "climate", "hulc", "hulc2model", "hulc_tests", "convertdb"
]

[workspace.package]
version = "22.10.0"
authors = ["Rafael Villar Burke <pachi@ietcc.csic.es>"]
edition = "2021"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
incremental = false
opt-level = "z"
# Modificación para mejorar info de flamegraph
debug = true


[profile.bench]
debug = true
