[workspace]

members = [
    "bemodel", "climate", "hulc", "hulc2model", "hulc_tests", "convertdb"
]

[workspace.package]
version = "22.10.0"
authors = ["Rafael Villar Burke <pachi@ietcc.csic.es>"]
edition = "2021"

[workspace.dependencies]
anyhow = "1.0"
bincode = "1"
clap = "3"
chrono = "0.4"
criterion = { version="0.4", features=["html_reports"] }
encoding = "0.2"
env_logger= "0.9"
exitcode = "1.1"
flate2 = "1"
glob = "0.3"
log = "0.4"
md5 = "0.7"
nalgebra = { version="0.31", features=["serde-serialize"] }
once_cell = "1.10"
regex = "1"
roxmltree = "0.15"
serde = { version="1.0", features=["derive"] }
serde_json = "1.0"
uneval="0.2"
uuid = { version="1.0", features=["serde","v4", "js"]}

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
incremental = false
opt-level = "z"
# Modificación para mejorar info de flamegraph
debug = true


[profile.bench]
debug = true
