[package]
name = "bemodel"
version = "0.11.0"
authors = ["Rafael Villar Burke <pachi@ietcc.csic.es>"]
edition = "2018"
description = "Basic data model for energy modelling of buildings"
repository = "https://github.com/pachi/cteenergymodel"
readme = "README.md"
keywords = ["buildings", "energy", "ISO EN 52000", "CTE", "EnvolventeCTE"]
categories = ["science"]
license = "MIT"

[dependencies]
hulc = { path = "../hulc" }
climate = { path = "../climate" }
anyhow = "1.0"
log = "0.4"
md5 = "0.7.0"
nalgebra = { version="0.28", features=["serde-serialize"] }
once_cell = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
env_logger= "0.9"
criterion = { version="0.3", features=["html_reports"] }

[[bench]]
name = "benchmark_bemodel"
harness = false

[profile.bench]
debug = true

# Modificación para mejorar info de flamegraph
[profile.release]
debug = true
