[package]
name = "bemodel"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Basic data model for energy modelling of buildings"
repository = "https://github.com/pachi/cteenergymodel"
readme = "README.md"
keywords = ["buildings", "energy", "ISO EN 52000", "CTE", "EnvolventeCTE"]
categories = ["science"]
license = "MIT"

[dependencies]
hulc = { path = "../hulc" }
climate = { path = "../climate" }
anyhow.workspace = true
clap.workspace = true
env_logger.workspace = true
exitcode.workspace = true
log.workspace = true
md5.workspace = true
nalgebra.workspace = true
once_cell.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "benchmark_bemodel"
harness = false
