[package]
name = "climate"
version = "0.1.0"
authors = ["Rafael Villar Burke <pachi@ietcc.csic.es>"]
repository = "https://github.com/pachi/cteenergymodel"
edition = "2018"

[dependencies]
chrono = "0.4"
anyhow = "1.0"

clap = "2"
exitcode = "1"
serde = { version="1", features=["derive"] }
serde_json = "1"

[[bin]]         
name = "metconvert"    
