[package]
name = "climate"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository = "https://github.com/pachi/cteenergymodel"

[dependencies]
chrono = "0.4"
anyhow = "1.0"

clap = "2"
exitcode = "1"
serde = { version="1", features=["derive"] }
serde_json = "1"
bincode = "1"

[[bin]]
name = "metconvert"    
