[package]
name = "climate"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository = "https://github.com/pachi/cteenergymodel"

[dependencies]
anyhow.workspace=true
bincode.workspace=true
chrono.workspace=true
clap.workspace=true
exitcode.workspace=true
serde.workspace=true
serde_json.workspace=true

[[bin]]
name = "metconvert"    
