[package]
name = "convertdb"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Convert HULC Database to BeModel data"
repository = "https://github.com/pachi/cteenergymodel"
readme = "README.md"
keywords = ["buildings", "energy", "ISO_EN_52000", "CTE", "EnvolventeCTE"]
categories = ["command-line-utilities", "science"]
license = "MIT"

[dependencies]
bemodel = { path = "../bemodel" }
hulc = { path = "../hulc" }
anyhow.workspace=true
clap.workspace=true
exitcode.workspace=true
flate2.workspace=true
regex.workspace=true
serde.workspace=true
serde_json.workspace=true
uneval.workspace=true