[package]
name = "hulc"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Data model for the HULC energy modelling application formats"
repository = "https://github.com/pachi/cteenergymodel"
readme = "README.md"
keywords = ["buildings", "energy", "ISO EN 52000", "CTE", "EnvolventeCTE"]
categories = ["science"]
license = "MIT"

[dependencies]
encoding.workspace = true
anyhow.workspace = true
flate2.workspace = true
glob.workspace = true
log.workspace = true
nalgebra.workspace = true
roxmltree.workspace = true
