[package]
name = "hulc2model"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Export data from a HULC project to the EnvolventeCTE JSON format"
repository = "https://github.com/pachi/cteenergymodel"
readme = "README.md"
keywords = ["buildings", "energy", "ISO_EN_52000", "CTE", "EnvolventeCTE"]
categories = ["command-line-utilities", "science"]
license = "MIT"

[dependencies]
bemodel = { path = "../bemodel" }
hulc = { path = "../hulc" }
anyhow = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(not(windows))'.dependencies]
env_logger = "0.9"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["wingdi", "winuser", "libloaderapi", "combaseapi", "objbase", "shobjidl", "shlobj", "winerror"] }
log4rs = { version = "1.0", features =["file_appender"] }
