[package]
name = "hulc2model"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Export data from a HULC project to the EnvolventeCTE JSON format"
repository = "https://github.com/pachi/cteenergymodel"
readme = "README.md"
keywords = ["buildings", "energy", "ISO_EN_52000", "CTE", "EnvolventeCTE"]
categories = ["command-line-utilities", "science"]
license = "MIT"

[dependencies]
bemodel = { path = "../bemodel" }
hulc = { path = "../hulc" }
anyhow.workspace=true
log.workspace=true
serde.workspace=true
serde_json.workspace=true

[target.'cfg(not(windows))'.dependencies]
env_logger.workspace=true

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["wingdi", "winuser", "libloaderapi", "combaseapi", "objbase", "shobjidl", "shlobj", "winerror"] }
log4rs = { version = "1.0", features =["file_appender"] }
