[package]
name = "hulc_tests"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Tests for hulc and hulc2model"
repository = "https://github.com/pachi/cteenergymodel"
readme = "README.md"
keywords = ["buildings", "energy", "ISO EN 52000", "CTE", "EnvolventeCTE"]
categories = ["science"]
license = "MIT"

[dependencies]
bemodel = { path = "../bemodel" }
hulc = { path = "../hulc" }
hulc2model = { path = "../hulc2model" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark_types"
harness = false
